# Multimodal-HC

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
reconstructions/: README.md
src/hedypet/: utils.py
src/hedypet/preprocessing/: normalization.py  resampling.py  tacs.py
src/hedypet/scripts/: 01_register_brain_mri.py  02_make_pipeline_bodystat.py  03_make_pipeline_bodydyn.py  04_make_normalization_consts.py  05_make_input_function_rois.py  06_extract_tacs_and_means.py  07_extract_volumes.py  08_combine_readouts_to_tables.py
src/multimodal_hc/: utils.py
src/multimodal_hc/preprocessing/: bids.py  resampling.py  tacs.py  utils.py
src/multimodal_hc/scripts/: 00_segmentation_and_defacing.md  01_register_brain_mri.py  02_make_pipeline_bodystat.py  03_make_pipeline_bodydyn.py  04_make_normalization_consts.py  05_make_input_function_rois.py  06_extract_tacs_and_means.py  07_extract_volumes.py  08_combine_readouts_to_tables.py
