[project]
name = "Multimodal-HC"
version = "0.0.1"
description = "Preprocessing and evaluation scripts for the Multimodal-HC dataset"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "antspyx>=0.5.4",
    "dcm2bids4ct>=0.1.0",
    "ipykernel>=7.3.0",
    "nibabel>=5.3.2",
    "nifti-dynamic>0.3",
    "opencv-python>=4.12.0.88",
    "parse>=1.20.2",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "totalsegmentator==2.5.0",
    "tqdm>=4.67.1",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
